--- a/PMSCRM/Views/Shared/_Layout.cshtml
+++ b/PMSCRM/Views/Shared/_Layout.cshtml
@@ -216,7 +216,7 @@
 
                 <!-- Settings -->
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a asp-area="" asp-controller="Login" asp-action="" class="sidebar-link">
                         <i class="lni lni-cog"></i>
                         <span>Settings</span>
                     </a>
@@ -225,7 +225,7 @@
 
             <!-- Sidebar Footer (Logout) -->
             <div class="sidebar-footer">
-                <a href="#" class="sidebar-link">
+                <a asp-area="" asp-controller="Login" asp-action="Index" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
