--- a/PMSCRM/Views/Customer/DeleteCustomer.cshtml
+++ b/PMSCRM/Views/Customer/DeleteCustomer.cshtml
@@ -1,5 +1,23 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model PMSCRM.Models.Customer
+
 @{
+    ViewData["Title"] = "Delete Customer";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h3 class="fw-bold fs-4 mb-3 text-danger">Delete Customer</h3>
+
+<div class="alert alert-danger">
+    <h4>Are you sure you want to delete this company?</h4>
+    <p><strong>Customer Name:</strong> @Model.Name</p>
+    <p><strong>Customer ID:</strong> @Model.CustomerId</p>
+    <p><strong>Company ID:</strong> @Model.CompanyId</p>
+    <p><strong>Company ID:</strong> @Model.CompanyId</p>
+
+
+</div>
+
+<form asp-action="DeleteConfirmed" asp-route-id="@Model.CustomerId" method="post">
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a href="/Customer/ViewCustomers" class="btn btn-secondary">Cancel</a>
+</form>
