--- a/PMSCRM/Views/Customer/Success.cshtml
+++ b/PMSCRM/Views/Customer/Success.cshtml
@@ -1,5 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Customer Added";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
+
+<h3>Customer successfully added!</h3>
+
