--- a/PMSCRM/Views/Customer/ViewCustomers.cshtml
+++ b/PMSCRM/Views/Customer/ViewCustomers.cshtml
@@ -1,5 +1,42 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<PMSCRM.Models.Customer>
+
 @{
+    ViewData["Title"] = "View Customer";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h3 class="fw-bold fs-4 mb-3">Customer List</h3>
+
+@if (Model != null && Model.Any())
+{
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Customer ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var customer in Model)
+            {
+                <tr>
+                    <td>@customer.CustomerId</td>
+                    <td>@customer.Name</td>
+                    <td>@customer.EmailAddress</td>
+                    <td>@customer.PhoneNumber</td>
+                    <td>
+                        <a href="/Customer/EditCustomer/@customer.CustomerId" class="btn btn-primary btn-sm">Edit</a>
+                        <a href="/Customer/DeleteCustomer/@customer.CustomerId" class="btn btn-danger btn-sm">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>No customers found.</p>
 }
