--- a/PMSCRM/Views/Process/AddProcess.cshtml
+++ b/PMSCRM/Views/Process/AddProcess.cshtml
@@ -13,10 +13,18 @@
     </div>
 
     <div class="mb-3">
-        <input type="text" class="form-control" id="companyName" placeholder="Company Name" name="Name" required>
+        <input type="text" class="form-control" id="processName" placeholder="Process Name" name="Name" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
+
+    <div class="mb-3">
+        <input type="number" class="form-control" placeholder="Duration in hours" name="Duration" id="processDuration" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <textarea name="Description" id="processDescription" placeholder="Description" class="form-control" maxlength="255" rows="5"></textarea>
 
     <button type="submit" class="btn btn-primary mt-3">Submit</button>
 </form>
