--- a/PMSCRM/Views/Process/EditProcess.cshtml
+++ b/PMSCRM/Views/Process/EditProcess.cshtml
@@ -1,5 +1,40 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model PMSCRM.Models.Process
+
 @{
+    ViewData["Title"] = "Edit Process";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h3 class="fw-bold fs-4 mb-3">Edit Process</h3>
+
+<!-- Form for editing a process -->
+<form class="was-validated" asp-action="EditProcess" asp-route-id="@Model.ProcessId" method="post">
+    <div class="mb-3 mt-3">
+        <label for="companyId" class="form-label">Company ID</label>
+        <input type="text" class="form-control" id="companyId" name="CompanyId" value="@Model.CompanyId" readonly>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3">
+        <label for="processName" class="form-label">Process Name</label>
+        <input type="text" class="form-control" id="processName" name="Name" value="@Model.Name" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3">
+        <label for="processDuration" class="form-label">Duration (hours)</label>
+        <input type="number" class="form-control" id="processDuration" name="Duration" value="@Model.Duration" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3">
+        <label for="processDescription" class="form-label">Description</label>
+        <textarea name="Description" id="processDescription" class="form-control" maxlength="255" rows="5">@Model.Description</textarea>
+    </div>
+
+    <button type="submit" class="btn btn-primary mt-3">Save Changes</button>
+    <a href="/Process/ViewProcesses" class="btn btn-secondary mt-3">Cancel</a>
+</form>
