--- a/PMSCRM/Views/Area/EditArea.cshtml
+++ b/PMSCRM/Views/Area/EditArea.cshtml
@@ -26,7 +26,7 @@
     
 
     <button type="submit" class="btn btn-primary mt-3">Save Changes</button>
-    <a href="/Task/ViewAreas" class="btn btn-secondary mt-3">Cancel</a>
+    <a href="/Area/ViewAreas" class="btn btn-secondary mt-3">Cancel</a>
 </form>
 
 
