--- a/PMSCRM/Views/Area/ViewAreas.cshtml
+++ b/PMSCRM/Views/Area/ViewAreas.cshtml
@@ -41,3 +41,9 @@ else
     <p>No areas found.</p>
 }
 
+<script>
+    $(function () {
+        $('[data-bs-toggle="tooltip"]').tooltip();
+    });
+</script>
+
