--- a/PMSCRM/Views/Customer/EditCustomer.cshtml
+++ b/PMSCRM/Views/Customer/EditCustomer.cshtml
@@ -33,7 +33,7 @@
 
     <div class="mb-3">
         <label for="Street" class="form-label">Street</label>
-        <input type="text" class="form-control" id="Street" name="Street" value="@Model.Street" required>
+        <input type="text" class="form-control" id="streetAddress" name="streetAddress" value="@Model.Street" required>
         <div class="invalid-feedback">Please enter the street name.</div>
     </div>
 
