--- a/PMSCRM/Views/Process/AddProcess.cshtml
+++ b/PMSCRM/Views/Process/AddProcess.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3 class="fw-bold fs-4 mb-3">Company</h3>
+<h3 class="fw-bold fs-4 mb-3">Process</h3>
 
 <form class="was-validated" asp-controller="Process" asp-action="AddProcess" method="post">
     <div class="mb-3 mt-3">
