--- a/PMSCRM/Views/Role/AddRole.cshtml
+++ b/PMSCRM/Views/Role/AddRole.cshtml
@@ -1,5 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Add Role";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h3 class="fw-bold fs-4 mb-3">Role</h3>
+
+<form class="was-validated" asp-controller="Role" asp-action="AddRole" method="post">
+    <div class="mb-3 mt-3">
+        <input type="text" class="form-control" id="companyId" placeholder="Company ID" name="CompanyId" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <div class="mb-3">
+        <input type="text" class="form-control" id="roleName" placeholder="Role Name" name="Name" required>
+        <div class="valid-feedback">Valid.</div>
+        <div class="invalid-feedback">Please fill out this field.</div>
+    </div>
+
+    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+</form>
