--- a/PMSCRM/Views/Role/DeleteRole.cshtml
+++ b/PMSCRM/Views/Role/DeleteRole.cshtml
@@ -1,5 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model PMSCRM.Models.Role
+
 @{
+    ViewData["Title"] = "Delete Role";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h3 class="fw-bold fs-4 mb-3 text-danger">Delete Role</h3>
+
+<div class="alert alert-danger">
+    <h4>Are you sure you want to delete this process?</h4>
+    <p><strong>Role Name:</strong> @Model.Name</p>
+    <p><strong>Company ID:</strong> @Model.CompanyId</p>
+
+</div>
+
+<form asp-action="DeleteConfirmed" asp-route-id="@Model.RoleId" method="post">
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a href="/Role/ViewRoles" class="btn btn-secondary">Cancel</a>
+</form>
