--- a/PMSCRM/wwwroot/css/site.css
+++ b/PMSCRM/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 html {
   font-size: 14px;
 }
@@ -24,7 +25,8 @@ body {
 /**/
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+
 
 ::after,
 ::before {
@@ -68,6 +70,7 @@ body {
     background-color: #B7E0FF;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
     #sidebar.expand {
