--- a/PMSCRM/Views/Area/AddArea.cshtml
+++ b/PMSCRM/Views/Area/AddArea.cshtml
@@ -27,6 +27,17 @@
 <!-- AutoComplete JQuery. Funkar, men täcker nästa fält.-->
 @section Scripts {
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <style>
+        .ui-autocomplete {
+            z-index: 1050;
+            position: absolute;
+            max-height: 200px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            background-color: white;
+            border: 1px solid #ccc;
+        }
+    </style>
     <script type="text/javascript">
         $(function () {
             $("#companyName").autocomplete({
