--- a/PMSCRM/Views/Area/DeleteArea.cshtml
+++ b/PMSCRM/Views/Area/DeleteArea.cshtml
@@ -5,12 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3 class="fw-bold fs-4 mb-3 text-danger">Delete Task</h3>
+<h3 class="fw-bold fs-4 mb-3 text-danger">Delete Area</h3>
 
 <div class="alert alert-danger">
-    <h4>Are you sure you want to delete this task?</h4>
+    <h4>Are you sure you want to delete this area?</h4>
     <p><strong>Area Name:</strong> @Model.Name</p>
-    <p><strong>Company ID:</strong> @Model.CompanyId</p>
     <p><strong>Description:</strong> @Model.Description</p>
 </div>
 
