CRUD on TPA etc

--- a/PMSCRM/Views/Area/Success.cshtml
+++ b/PMSCRM/Views/Area/Success.cshtml
@@ -6,3 +6,5 @@
 
 <h3>Area successfully added!</h3>
 
+<a asp-area="" asp-controller="Area" asp-action="ViewAreas" class="btn btn-success">View Areas</a>
+
