--- a/PMSCRM/Views/Area/ViewAreas.cshtml
+++ b/PMSCRM/Views/Area/ViewAreas.cshtml
@@ -39,6 +39,9 @@ else
     <p>No areas found.</p>
 }
 
+<a asp-area="" asp-controller="Area" asp-action="AddArea" class="btn btn-success">Add new Area</a>
+
+
 <script>
     $(function () {
         $('[data-bs-toggle="tooltip"]').tooltip();
