--- a/PMSCRM/Views/Customer/ViewCustomers.cshtml
+++ b/PMSCRM/Views/Customer/ViewCustomers.cshtml
@@ -40,3 +40,6 @@ else
 {
     <p>No customers found.</p>
 }
+
+<a asp-area="" asp-controller="Customer" asp-action="AddCustomer" class="btn btn-success">Add new Customer</a>
+
