--- a/PMSCRM/Views/Process/ViewProcesses.cshtml
+++ b/PMSCRM/Views/Process/ViewProcesses.cshtml
@@ -41,4 +41,5 @@ else
     <p>No processes found.</p>
 }
 
-<a href="/Process/AddProcess" class="btn btn-success mt-3">Add New Process</a>
+<a asp-area="" asp-controller="Process" asp-action="AddProcess" class="btn btn-success">Add new Process</a>
+
