--- a/PMSCRM/Views/Customer/EditCustomer.cshtml
+++ b/PMSCRM/Views/Customer/EditCustomer.cshtml
@@ -6,12 +6,8 @@
 <h3 class="fw-bold fs-4 mb-3">Edit Customer</h3>
 
 <!-- The form to edit customer details -->
-<form asp-action="EditCustomer" asp-route-id="@Model.CompanyId" method="post" class="was-validated">
-    <div class="mb-3">
-        <label for="CompanyId" class="form-label">Company ID</label>
-        <input type="text" class="form-control" id="CompanyId" name="CompanyId" value="@Model.CompanyId" readonly>
-        <div class="invalid-feedback">Please enter the Company ID.</div>
-    </div>
+<form asp-action="EditCustomer" asp-route-id="@Model.CustomerId" method="post" class="was-validated">
+    
 
     <div class="mb-3">
         <label for="Name" class="form-label">Company Name</label>
