--- a/PMSCRM/Views/Shared/_Layout.cshtml
+++ b/PMSCRM/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PMSCRM</title>
 
+
+    
     <!-- Lineicons and Bootstrap CSS -->
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,7 +15,7 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PMSCRM.styles.css" asp-append-version="true" />
-@*     <link rel="stylesheet" href="~/css/site.css" /> <!-- Your custom CSS --> *@
+
     @RenderSection("styles", required: false)
 </head>
 <body>
@@ -211,12 +213,37 @@
                     </li> *@
                 </ul>
             </li>
+
+                <!--Task Process Area-->
+                <li class="sidebar-item">
+                    <a href="User/user.html" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
+                       data-bs-target="#taskProcessArea" aria-expanded="false" aria-controls="taskProcessArea">
+                        <i class="lni lni-users"></i>
+                        <span>Task-Process-Area</span>
+                    </a>
+                    <ul id="taskProcessArea" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                        <li class="sidebar-item">
+                            <a asp-area="" asp-controller="TaskProcessArea" asp-action="AddTaskProcessArea" class="sidebar-link">Add TaskProcessArea</a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a asp-area="" asp-controller="TaskProcessArea" asp-action="ViewTaskProcessAreas" class="sidebar-link">View TaskProcessAreas</a>
+                        </li>
+                        @* <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Update</a>
+                        </li>
+                        <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Delete</a>
+                        </li> *@
+                    </ul>
+                </li>
+
+
             
 
 
                 <!-- Settings -->
                 <li class="sidebar-item">
-                    <a asp-area="" asp-controller="Login" asp-action="" class="sidebar-link">
+                    <a asp-area="" asp-controller="TaskProcessArea" asp-action="AddTaskProcessAreas" class="sidebar-link">
                         <i class="lni lni-cog"></i>
                         <span>Settings</span>
                         
@@ -285,9 +312,9 @@
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
-            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous" async></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @* <script src="~/js/site.js"></script> *@
 
